k8s/apps/bentopdf/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:

      nodeAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: node-role/worker
                  operator: In
                  values: ["true"]

      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf-simple:2.8.8
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP

          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi

      restartPolicy: Always
